--- a/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
+++ b/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5C176074-2378-463D-8526-5610E698B816}</ProjectGuid>
+    <ProjectGuid>{9426B4FB-7198-48E2-94F3-FA5499AB5A61}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RepairWorkSoftwareModel</RootNamespace>
-    <AssemblyName>RepairWorkSoftwareModel</AssemblyName>
+    <RootNamespace>RepairWorkSoftwareDAL</RootNamespace>
+    <AssemblyName>RepairWorkSoftwareDAL</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,13 +41,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Customer.cs" />
-    <Compile Include="Material.cs" />
-    <Compile Include="MaterialWork.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="OrderStatus.cs" />
+    <Compile Include="BindingModel\CustomerBindingModel.cs" />
+    <Compile Include="BindingModel\MaterialBindingModel.cs" />
+    <Compile Include="BindingModel\MaterialWorkBindingModel.cs" />
+    <Compile Include="BindingModel\OrderBindingModel.cs" />
+    <Compile Include="BindingModel\WorkBindingModel.cs" />
+    <Compile Include="Interface\ICustomerService.cs" />
+    <Compile Include="Interface\IMainService.cs" />
+    <Compile Include="Interface\IMaterialService.cs" />
+    <Compile Include="Interface\IWorkService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Work.cs" />
+    <Compile Include="ViewModel\CustomerViewModel.cs" />
+    <Compile Include="ViewModel\MaterialViewModel.cs" />
+    <Compile Include="ViewModel\MaterialWorkViewModel.cs" />
+    <Compile Include="ViewModel\OrderViewModel.cs" />
+    <Compile Include="ViewModel\WorkViewModel.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
