--- a/RepairWorkSoftwareServiceImplementList/RepairWorkSoftwareServiceImplementList.csproj
+++ b/RepairWorkSoftwareServiceImplementList/RepairWorkSoftwareServiceImplementList.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5C176074-2378-463D-8526-5610E698B816}</ProjectGuid>
+    <ProjectGuid>{DE977E0D-7755-4FA3-BE06-65B9D5DC4A90}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RepairWorkSoftwareModel</RootNamespace>
-    <AssemblyName>RepairWorkSoftwareModel</AssemblyName>
+    <RootNamespace>RepairWorkSoftwareServiceImplementList</RootNamespace>
+    <AssemblyName>RepairWorkSoftwareServiceImplementList</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,13 +41,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Customer.cs" />
-    <Compile Include="Material.cs" />
-    <Compile Include="MaterialWork.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="OrderStatus.cs" />
+    <Compile Include="CustomerServiceList.cs" />
+    <Compile Include="DataListSingleton.cs" />
+    <Compile Include="MainServiceList.cs" />
+    <Compile Include="MaterialServiceList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Work.cs" />
+    <Compile Include="WorkServiceList.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RepairWorkSoftwareDAL\RepairWorkSoftwareDAL.csproj">
+      <Project>{9426b4fb-7198-48e2-94f3-fa5499ab5a61}</Project>
+      <Name>RepairWorkSoftwareDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepairWorkSoftwareModel\RepairWorkSoftwareModel.csproj">
+      <Project>{5c176074-2378-463d-8526-5610e698b816}</Project>
+      <Name>RepairWorkSoftwareModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
