--- a/RepairWorkSoftwareView/RepairWorkSoftwareView.csproj
+++ b/RepairWorkSoftwareView/RepairWorkSoftwareView.csproj
@@ -73,11 +73,29 @@
     <Compile Include="CustomersForm.Designer.cs">
       <DependentUpon>CustomersForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PutOnStockForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PutOnStockForm.Designer.cs">
+      <DependentUpon>PutOnStockForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StockForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StockForm.Designer.cs">
+      <DependentUpon>StockForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StocksForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StocksForm.Designer.cs">
+      <DependentUpon>StocksForm.cs</DependentUpon>
     </Compile>
     <Compile Include="WorkEditForm.cs">
       <SubType>Form</SubType>
@@ -138,6 +156,15 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="PutOnStockForm.resx">
+      <DependentUpon>PutOnStockForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StockForm.resx">
+      <DependentUpon>StockForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StocksForm.resx">
+      <DependentUpon>StocksForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WorkEditForm.resx">
       <DependentUpon>WorkEditForm.cs</DependentUpon>
     </EmbeddedResource>
