--- a/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
+++ b/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
@@ -45,16 +45,21 @@
     <Compile Include="BindingModel\MaterialBindingModel.cs" />
     <Compile Include="BindingModel\MaterialWorkBindingModel.cs" />
     <Compile Include="BindingModel\OrderBindingModel.cs" />
+    <Compile Include="BindingModel\StockBindingModel.cs" />
+    <Compile Include="BindingModel\StockMaterialBindingModel.cs" />
     <Compile Include="BindingModel\WorkBindingModel.cs" />
     <Compile Include="Interface\ICustomerService.cs" />
     <Compile Include="Interface\IMainService.cs" />
     <Compile Include="Interface\IMaterialService.cs" />
+    <Compile Include="Interface\IStockService.cs" />
     <Compile Include="Interface\IWorkService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\MaterialViewModel.cs" />
     <Compile Include="ViewModel\MaterialWorkViewModel.cs" />
     <Compile Include="ViewModel\OrderViewModel.cs" />
+    <Compile Include="ViewModel\StockMaterialViewModel.cs" />
+    <Compile Include="ViewModel\StockViewModel.cs" />
     <Compile Include="ViewModel\WorkViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
