--- a/RepairWorkSoftwareModel/RepairWorkSoftwareModel.csproj
+++ b/RepairWorkSoftwareModel/RepairWorkSoftwareModel.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Order.cs" />
     <Compile Include="OrderStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stock.cs" />
+    <Compile Include="StockMaterial.cs" />
     <Compile Include="Work.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
