--- a/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
+++ b/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="BindingModel\CustomerBindingModel.cs" />
     <Compile Include="BindingModel\MaterialBindingModel.cs" />
-    <Compile Include="BindingModel\MaterialWorkBindingModel.cs" />
+    <Compile Include="BindingModel\WorkMaterialBindingModel.cs" />
     <Compile Include="BindingModel\OrderBindingModel.cs" />
     <Compile Include="BindingModel\StockBindingModel.cs" />
     <Compile Include="BindingModel\StockMaterialBindingModel.cs" />
@@ -56,7 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\MaterialViewModel.cs" />
-    <Compile Include="ViewModel\MaterialWorkViewModel.cs" />
+    <Compile Include="ViewModel\WorkMaterialViewModel.cs" />
     <Compile Include="ViewModel\OrderViewModel.cs" />
     <Compile Include="ViewModel\StockMaterialViewModel.cs" />
     <Compile Include="ViewModel\StockViewModel.cs" />
