--- a/RepairWorkSoftwareWeb/packages.config
+++ b/RepairWorkSoftwareWeb/packages.config
@@ -17,5 +17,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" />
+  <package id="Unity" version="5.9.7" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
