--- a/RepairWorkSoftwareWeb/packages.config
+++ b/RepairWorkSoftwareWeb/packages.config
@@ -19,5 +19,9 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" />
   <package id="Unity" version="5.9.7" targetFramework="net46" />
+  <package id="Unity.Abstractions" version="4.1.3" targetFramework="net46" />
+  <package id="Unity.Container" version="5.10.3" targetFramework="net46" />
+  <package id="Unity.Mvc" version="5.10.1" targetFramework="net46" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
