--- a/RepairWorkSoftwareView/packages.config
+++ b/RepairWorkSoftwareView/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="140.340.80" targetFramework="net46" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" />
   <package id="Unity" version="5.9.7" targetFramework="net46" />
 </packages>
