--- a/ServiceImplementsDatabase/packages.config
+++ b/ServiceImplementsDatabase/packages.config
@@ -1,4 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.4.1" targetFramework="net46" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net46" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net46" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net46" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net46" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net46" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1358.0" targetFramework="net46" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net46" />
+  <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net46" />
 </packages>
