--- a/RepairWorkSoftwareView/App.config
+++ b/RepairWorkSoftwareView/App.config
@@ -5,11 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AbstractDbContext" connectionString="Data Source=(local);Initial Catalog=AbstractDatabase;Integrated Secutiry=True;" providerName="System.Data.SqlClient" />
+    <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=RepairWorkSoftwareDb;Integrated Security = True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
-  </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
