--- a/RepairWorkSoftwareRestAPI/Web.config
+++ b/RepairWorkSoftwareRestAPI/Web.config
@@ -47,9 +47,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <!--<connectionStrings>-->
-    <!--<add name="AbstractDbContext" connectionString="Data Source=(local);Initial Catalog=AbstractDatabase;Integrated Secutiry=True;" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
+  <connectionStrings>
+    <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=RepairWorkSoftwareDb;Integrated Security = True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
