--- a/RepairWorkSoftwareRestAPI/Web.config
+++ b/RepairWorkSoftwareRestAPI/Web.config
@@ -48,7 +48,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=RepairWorkSoftwareDb;Integrated Security = True" providerName="System.Data.SqlClient" />
+    <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=RepairWorkSoftwareDb;Integrated Security = True;MultipleActiveResultSets = True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
