--- a/RepairWorkSoftwareView/App.config
+++ b/RepairWorkSoftwareView/App.config
@@ -4,8 +4,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="IPAddress" value="http://localhost:9000/" />
+  </appSettings>
   <connectionStrings>
-    <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=RepairWorkSoftwareDb;Integrated Security = True" providerName="System.Data.SqlClient" />
+    <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=RepairWorkSoftwareDb;Integrated Security = True;MultipleActiveResultSets = True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
