the bulk of the work is done

--- a/RepairWorkSoftwareRestAPI/RepairWorkSoftwareRestAPI.csproj
+++ b/RepairWorkSoftwareRestAPI/RepairWorkSoftwareRestAPI.csproj
@@ -115,6 +115,7 @@
     <Compile Include="App_Start\UnityWebApiActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\ImplementerController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\MaterialController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
@@ -124,6 +125,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\WorkImplementer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
