--- a/RepairWorkSoftwareModel/RepairWorkSoftwareModel.csproj
+++ b/RepairWorkSoftwareModel/RepairWorkSoftwareModel.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
+    <Compile Include="Implementer.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="MaterialWork.cs" />
     <Compile Include="Order.cs" />
