--- a/RepairWorkSoftwareView/RepairWorkSoftwareView.csproj
+++ b/RepairWorkSoftwareView/RepairWorkSoftwareView.csproj
@@ -91,6 +91,18 @@
     <Compile Include="CustomersOrdersForm.Designer.cs">
       <DependentUpon>CustomersOrdersForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ImplementersEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImplementersEditForm.Designer.cs">
+      <DependentUpon>ImplementersEditForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ImplementersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImplementersForm.Designer.cs">
+      <DependentUpon>ImplementersForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="StocksLoadForm.cs">
       <SubType>Form</SubType>
@@ -174,6 +186,12 @@
     </Compile>
     <EmbeddedResource Include="CustomersOrdersForm.resx">
       <DependentUpon>CustomersOrdersForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImplementersEditForm.resx">
+      <DependentUpon>ImplementersEditForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImplementersForm.resx">
+      <DependentUpon>ImplementersForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report.rdlc" />
     <EmbeddedResource Include="StocksLoadForm.resx">
