--- a/RepairWorkSoftwareView/App.config
+++ b/RepairWorkSoftwareView/App.config
@@ -4,6 +4,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+    <appSettings>
+      <add key="IPAddress" value="http://localhost:9000/"/>
+    </appSettings>
   <connectionStrings>
     <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=u-2019-tp;Integrated Security = True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
