--- a/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
+++ b/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Interface\IStockService.cs" />
     <Compile Include="Interface\IWorkService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\ClientOrdersModel.cs" />
+    <Compile Include="ViewModel\CustomerOrdersViewModel.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\MaterialViewModel.cs" />
     <Compile Include="ViewModel\StocksLoadViewModel.cs" />
