--- a/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
+++ b/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BindingModel\ImplementerBindingModel.cs" />
     <Compile Include="BindingModel\ReposrtBindingModel.cs" />
     <Compile Include="BindingModel\CustomerBindingModel.cs" />
     <Compile Include="BindingModel\MaterialBindingModel.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="BindingModel\StockMaterialBindingModel.cs" />
     <Compile Include="BindingModel\WorkBindingModel.cs" />
     <Compile Include="Interface\ICustomerService.cs" />
+    <Compile Include="Interface\IImplementerService.cs" />
     <Compile Include="Interface\IMainService.cs" />
     <Compile Include="Interface\IMaterialService.cs" />
     <Compile Include="Interface\IReportService.cs" />
@@ -59,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CustomerOrdersViewModel.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
+    <Compile Include="ViewModel\ImplementerViewModel.cs" />
     <Compile Include="ViewModel\MaterialViewModel.cs" />
     <Compile Include="ViewModel\StocksLoadViewModel.cs" />
     <Compile Include="ViewModel\WorkMaterialViewModel.cs" />
