--- a/RepairWorkSoftwareRestApi/RepairWorkSoftwareRestApi.csproj
+++ b/RepairWorkSoftwareRestApi/RepairWorkSoftwareRestApi.csproj
@@ -131,6 +131,7 @@
     <Compile Include="App_Start\UnityWebApiActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\ImplementerController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\MaterialController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
@@ -140,6 +141,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\WorkImplementer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
