--- a/RepairWorkSoftwareView/App.config
+++ b/RepairWorkSoftwareView/App.config
@@ -8,7 +8,7 @@
       <add key="IPAddress" value="http://localhost:58404/"/>
     </appSettings>
   <connectionStrings>
-    <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=u-2019-tp;Integrated Security = True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=u-2019-tp-for-6-lab;Integrated Security = True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
