--- a/RepairWorkSoftwareView/RepairWorkSoftwareView.csproj
+++ b/RepairWorkSoftwareView/RepairWorkSoftwareView.csproj
@@ -128,6 +128,18 @@
     <Compile Include="CustomersOrdersForm.Designer.cs">
       <DependentUpon>CustomersOrdersForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ImplementerEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImplementerEditForm.Designer.cs">
+      <DependentUpon>ImplementerEditForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ImplementersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImplementersForm.Designer.cs">
+      <DependentUpon>ImplementersForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="StocksLoadForm.cs">
       <SubType>Form</SubType>
@@ -211,6 +223,12 @@
     </Compile>
     <EmbeddedResource Include="CustomersOrdersForm.resx">
       <DependentUpon>CustomersOrdersForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImplementerEditForm.resx">
+      <DependentUpon>ImplementerEditForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImplementersForm.resx">
+      <DependentUpon>ImplementersForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report.rdlc" />
     <EmbeddedResource Include="StocksLoadForm.resx">
