--- a/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
+++ b/RepairWorkSoftwareDAL/RepairWorkSoftwareDAL.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BindingModel\ImplementerBindingModel.cs" />
+    <Compile Include="BindingModel\MessageInfoBindingModel.cs" />
     <Compile Include="BindingModel\ReposrtBindingModel.cs" />
     <Compile Include="BindingModel\CustomerBindingModel.cs" />
     <Compile Include="BindingModel\MaterialBindingModel.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Interface\IImplementerService.cs" />
     <Compile Include="Interface\IMainService.cs" />
     <Compile Include="Interface\IMaterialService.cs" />
+    <Compile Include="Interface\IMessageInfoService.cs" />
     <Compile Include="Interface\IReportService.cs" />
     <Compile Include="Interface\IStockService.cs" />
     <Compile Include="Interface\IWorkService.cs" />
@@ -63,6 +65,7 @@
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\ImplementerViewModel.cs" />
     <Compile Include="ViewModel\MaterialViewModel.cs" />
+    <Compile Include="ViewModel\MessageInfoViewModel.cs" />
     <Compile Include="ViewModel\StocksLoadViewModel.cs" />
     <Compile Include="ViewModel\WorkMaterialViewModel.cs" />
     <Compile Include="ViewModel\OrderViewModel.cs" />
