--- a/ServiceImplementsDatabase/ServiceImplementsDatabase.csproj
+++ b/ServiceImplementsDatabase/ServiceImplementsDatabase.csproj
@@ -94,6 +94,10 @@
     <Compile Include="Migrations\201911122015073_lab6.Designer.cs">
       <DependentUpon>201911122015073_lab6.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911182225231_lab7.cs" />
+    <Compile Include="Migrations\201911182225231_lab7.Designer.cs">
+      <DependentUpon>201911182225231_lab7.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -124,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911122015073_lab6.resx">
       <DependentUpon>201911122015073_lab6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911182225231_lab7.resx">
+      <DependentUpon>201911182225231_lab7.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
