--- a/RepairWorkSoftwareRestApi/Web.config
+++ b/RepairWorkSoftwareRestApi/Web.config
@@ -10,10 +10,13 @@
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
     </configSections>
+  <appSettings>
+    <add key="MailLogin" value="slavaievlev10@gmail.com" />
+    <add key="MailPassword" value="d2q8I92-#1!" />
+  </appSettings>
   <connectionStrings>
     <add name="AbstractDbContext" connectionString="Data Source=localhost\SQLEXPRESS01;Initial Catalog=u-2019-tp-for-7-lab;Integrated Security = True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
