--- a/RepairWorkSoftwareView/App.config
+++ b/RepairWorkSoftwareView/App.config
@@ -5,7 +5,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
     <appSettings>
-      <add key="IPAddress" value="http://localhost:58404/"/>
+      <add key="IPAddress" value="http://localhost:58404/" />
+      <add key="MailLogin" value="slavaievlev10@gmail.com" />
+      <add key="MailPassword" value="d2q8I92-#1!" />
     </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
