--- a/RepairWorkSoftwareRestApi/RepairWorkSoftwareRestApi.csproj
+++ b/RepairWorkSoftwareRestApi/RepairWorkSoftwareRestApi.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Controllers\ImplementerController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\MaterialController.cs" />
+    <Compile Include="Controllers\MessageInfoController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\StockController.cs" />
     <Compile Include="Controllers\WorkController.cs" />
