--- a/RepairWorkSoftwareView/packages.config
+++ b/RepairWorkSoftwareView/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="OpenPop.NET" version="2.0.6.1120" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net46" />
   <package id="Unity.Abstractions" version="5.11.1" targetFramework="net46" />
