--- a/RepairWorkSoftwareRestApi/RepairWorkSoftwareRestApi.csproj
+++ b/RepairWorkSoftwareRestApi/RepairWorkSoftwareRestApi.csproj
@@ -142,6 +142,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\ReflectionService.cs" />
     <Compile Include="Service\WorkImplementer.cs" />
   </ItemGroup>
   <ItemGroup>
